--- a/Musmanni/Base.lproj/Main.storyboard
+++ b/Musmanni/Base.lproj/Main.storyboard
@@ -1,14 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Zle-15-CqX">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Oswald-Light.ttf">
+            <string>Oswald-Light</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +22,72 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pTM-Q1-d23">
+                                <color key="backgroundColor" red="0.85547810792922974" green="0.3637232780456543" blue="0.085722498595714569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="UTC-2j-guN"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fondo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Q5m-3C-W4c"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="YWc-Ro-slv">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="67" id="0Ua-58-aB9"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BIENVENIDOS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wvb-NQ-iza">
+                                <fontDescription key="fontDescription" name="Oswald-Light" family="Oswald" pointSize="32"/>
+                                <color key="textColor" red="0.89890187978744507" green="0.86294180154800415" blue="0.84586465358734131" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Q5m-3C-W4c" secondAttribute="bottom" id="1EV-XP-9nK"/>
+                            <constraint firstItem="Q5m-3C-W4c" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="26L-hr-yiJ"/>
+                            <constraint firstAttribute="trailing" secondItem="YWc-Ro-slv" secondAttribute="trailing" constant="46" id="7rI-eO-iys"/>
+                            <constraint firstAttribute="trailing" secondItem="wvb-NQ-iza" secondAttribute="trailing" constant="105" id="Ch6-eD-HF5"/>
+                            <constraint firstItem="pTM-Q1-d23" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Eyc-de-Ajm"/>
+                            <constraint firstAttribute="trailing" secondItem="pTM-Q1-d23" secondAttribute="trailing" id="PTc-XT-jGy"/>
+                            <constraint firstItem="YWc-Ro-slv" firstAttribute="top" secondItem="pTM-Q1-d23" secondAttribute="bottom" constant="51" id="USw-sT-Dni"/>
+                            <constraint firstItem="pTM-Q1-d23" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="VeX-LI-EL0"/>
+                            <constraint firstItem="wvb-NQ-iza" firstAttribute="top" secondItem="YWc-Ro-slv" secondAttribute="bottom" constant="92" id="b3y-vv-FqF"/>
+                            <constraint firstItem="Q5m-3C-W4c" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="26" id="mdj-W1-wTg"/>
+                            <constraint firstItem="YWc-Ro-slv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="47" id="nrC-By-bKK"/>
+                            <constraint firstAttribute="trailing" secondItem="Q5m-3C-W4c" secondAttribute="trailing" id="q1J-Pl-Ac1"/>
+                            <constraint firstItem="wvb-NQ-iza" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="105" id="zsT-0k-JaK"/>
+                        </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <navigationItem key="navigationItem" id="ilN-ug-xh1"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-172" y="-42.728635682158924"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="6iQ-co-bdF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zle-15-CqX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="gbG-gQ-TYa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PQ9-zj-tkE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s2H-HZ-ozU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-911.20000000000005" y="-44.527736131934034"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="fondo.png" width="640" height="1103"/>
+        <image name="logo.png" width="568" height="109"/>
+    </resources>
 </document>
