--- a/Musmanni/Base.lproj/Main.storyboard
+++ b/Musmanni/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Zle-15-CqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Jh5-Uh-aHO">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -158,25 +158,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-172" y="-42.728635682158924"/>
+            <point key="canvasLocation" x="70" y="-46"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="6iQ-co-bdF">
+        <scene sceneID="7mZ-K9-doS">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zle-15-CqX" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Jh5-Uh-aHO" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="gbG-gQ-TYa">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ga4-kl-rad">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="PQ9-zj-tkE"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="woE-Zq-ojj"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="s2H-HZ-ozU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CLU-K9-7og" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-911.20000000000005" y="-44.527736131934034"/>
+            <point key="canvasLocation" x="-674.39999999999998" y="-46.326836581709152"/>
         </scene>
     </scenes>
     <resources>
